feat(auth): allowing authentication with an email/password (#18)
* feat: register with email/password

* chore: write test for register a user

* feat(auth): register with email/password

* chore: tests and documentation for login user

* feat(user): get current user information

* feat(user): update user profile
