# app/Models/User.ts
@@ -1,31 +1,39 @@
-import { DateTime } from "luxon";
-import { BaseModel, column } from "@ioc:Adonis/Lucid/Orm";
+import { DateTime } from 'luxon'
+import { BaseModel, beforeSave, column } from '@ioc:Adonis/Lucid/Orm'
+import Hash from '@ioc:Adonis/Core/Hash'
 
 export default class User extends BaseModel {
   @column({ isPrimary: true })
-  public id: string;
+  public id: string
 
   @column()
-  public email: string;
+  public email: string
 
   @column({ serializeAs: null })
-  public password: string;
+  public password: string
 
   @column()
-  public fullName: string;
+  public fullName: string
 
   @column({ serializeAs: null })
-  public providerId: string;
+  public providerId: string
 
   @column({ serializeAs: null })
-  public provider: string;
+  public provider: string
 
   @column()
-  public avatarUrl: string;
+  public avatarUrl: string
 
   @column.dateTime({ autoCreate: true })
-  public createdAt: DateTime;
+  public createdAt: DateTime
 
   @column.dateTime({ autoCreate: true, autoUpdate: true })
-  public updatedAt: DateTime;
+  public updatedAt: DateTime
+
+  @beforeSave()
+  public static async hashPassword(user: User) {
+    if (user.$dirty.password) {
+      user.password = await Hash.make(user.password)
+    }
+  }
 }
